--- a/index.html
+++ b/index.html
@@ -30,15 +30,10 @@
 <link rel="shortcut icon" href="images/favicon.ico"/> 
 <link rel="apple-touch-icon" href="images/touch_icon.png" type="image/png"/>
 
-<link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" media="screen"/>
-<link rel="stylesheet" href="css/box_grid_v2.css" media="all"/>
-<link rel="stylesheet" href="css/style_standards.css" media="screen"/>
-<link rel="stylesheet" href="css/style_main.css" media="screen"/>
+<link rel="stylesheet" href="css/style_complete.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
 <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
 <script src="js/placeholder.min.js"></script>
 
 </head>
