--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <link rel="stylesheet" href="css/style_complete.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+<script src="js/fancybox.min.js"></script>
 <script src="js/placeholder.min.js"></script>
 
 </head>
@@ -43,9 +44,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
+				<div class="mobile-nav"></div>
 				<nav role="navigation">
 					<ul>
-						<li>nav</li>
+						<li><a href="">Link 1</a></li>
+						<li><a href="">Link 2</a></li>
+						<li><a href="">Link 3</a></li>
 					</ul>
 				</nav>
 			</div><!--/.box-16-->
@@ -53,11 +57,11 @@
 	</div><!--/.container-->
 </header>
 
-<section id="content">
+<section id="content" class="first">
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
-				Temp Content Master
+				Content
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
@@ -67,13 +71,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
-				footer
+				Footer
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
 </footer>
 
 <!--Scripts-->
+<script src="js/base.js"></script>
 <script src="js/functions.js"></script>
 
 <!--[if lt IE 9 ]>
