--- a/mobile_demo.html
+++ b/mobile_demo.html
@@ -30,34 +30,83 @@
 <link rel="shortcut icon" href="images/favicon.ico"/> 
 <link rel="apple-touch-icon" href="images/touch_icon.png" type="image/png"/>
 
-<link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" media="screen"/>
 <link rel="stylesheet" href="css/style_complete_mobile.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
-<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-<script src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<script src="js/jquery.easing.1.3.js"></script>
+<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+<script src="js/fancybox.min.js"></script>
 <script src="js/placeholder.min.js"></script>
 
 </head>
 <body>
 
-<header>
+<section>
 	<div class="container">
+		
 		<div class="row">
-			<div class="box-16">
-				header
-			</div><!--/.box-16-->
+			<div class="box-4">
+				<span>4</span>
+			</div><!--/.box-4-->
 		</div><!--/.row-->
-	</div><!--/.container-->
-</header>
-
-<section id="">
-	<div class="container">
+		
 		<div class="row">
-			<div class="box-16">
-				content
-			</div><!--/.box-16-->
+			<div class="box-3">
+				<span>3</span>
+			</div><!--/.box-3-->
+			
+			<div class="box-1">
+				<span>1</span>
+			</div><!--/.box-1-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-2">
+				<span>2</span>
+			</div><!--/.box-2-->
+			
+			<div class="box-2">
+				<span>2</span>
+			</div><!--/.box-2-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-1">
+				<span>1</span>
+			</div><!--/.box-1-->
+			
+			<div class="box-3">
+				<span>3</span>
+			</div><!--/.box-3-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-4">
+				<span>4</span>
+			</div><!--/.box-4-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-1 third">
+				<span>third</span>
+			</div><!--/.box-1 third-->
+			
+			<div class="box-1 third">
+				<span>third</span>
+			</div><!--/.box-1 third-->
+			
+			<div class="box-1 third">
+				<span>third</span>
+			</div><!--/.box-1 third-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-2 two-third">
+				<span>two-third</span>
+			</div><!--/.box-2 two-third-->
+			
+			<div class="box-1 third">
+				<span>third</span>
+			</div><!--/.box-1 third-->
 		</div><!--/.row-->
 	</div><!--/.container-->
 </section>
