fixes to js and tabs

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -679,7 +679,7 @@
 
 <section id="tabs">
 	<div class="container">
-		<div class="row">
+		<div class="row with-spacing">
 			<div class="box-16">
 				<h4>Tabs</h4>
 			</div><!--/.box-16-->
@@ -687,11 +687,11 @@
 			<div class="box-16">
 				<div class="tabs-wrap">
 					<ul class="tabs-nav">
-						<li id="tabButton1" class="active">Tab 1</li>
-						<li id="tabButton2">Tab 2</li>
-						<li id="tabButton3">Tab 3</li>
-						<li id="tabButton4">Tab 4</li>
-						<li id="tabButton5">Tab 5</li>
+						<li class="active"><a href="#tab1">Tab 1</a></li>
+						<li><a href="#tab2">Tab 2</a></li>
+						<li><a href="#tab3">Tab 3</a></li>
+						<li><a href="#tab4">Tab 4</a></li>
+						<li><a href="#tab5">Tab 5</a></li>
 					</ul><!--/.tabs-nav-->
 					
 					<div id="tab1" class="tab-frame">
