add ferret logo

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -44,6 +44,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
+				<img class="logo" src="images/logo_ferret.png" alt="Ferret"/>
 				<div class="mobile-nav"></div>
 				<nav role="navigation">
 					<ul>
