updates to framework

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -667,6 +667,13 @@
 					</div><!--/.row-->
 					
 					<div class="row">
+						<div class="box-6">
+							<input class="checkbox" type="checkbox"/>
+							<label>This is a checkbox label</label>
+						</div><!--/.box-6-->
+					</div><!--/.row-->
+					
+					<div class="row">
 						<div class="box-3">
 							<input class="button submit" type="submit" value="Submit"/>
 						</div><!--/.box-3-->
