change to demo css

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -37,6 +37,18 @@
 <script src="js/fancybox.min.js"></script>
 <script src="js/placeholder.min.js"></script>
 
+<!-- JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT -->
+<style>
+section {margin: 20px 0;}
+.row {margin-bottom: 20px;}
+span {display: block; -webkit-transition: all .15s ease-in-out; background: #e1e1e1;}
+span:hover {background: #464646; color: #fff;}
+span.headline {background: none; color: #464646;}
+.row .row {background: #acacac;}
+.row form .row {background: none;}
+</style>
+<!-- END REMOVE -->
+
 </head>
 <body>
 
