changes to less order

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -39,7 +39,7 @@
 
 <!-- JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT -->
 <style>
-section {margin: 20px 0;}
+section {padding: 20px 0;}
 .row {margin-bottom: 20px;}
 span {display: block; -webkit-transition: all .15s ease-in-out; background: #e1e1e1;}
 span:hover {background: #464646; color: #fff;}
