changes to wordpress less and updated modernizr

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -760,6 +760,52 @@ span.headline {background: none; color: #464646;}
 			<div class="box-16">
 				<h6>Basic Table</h6>
 				<table>
+					<tbody>
+						<tr>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+						</tr>
+						<tr>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+						</tr>
+						<tr>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+						</tr>
+						<tr>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+						</tr>
+						<tr>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+						</tr>
+						<tr>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+							<td>Table Body</td>
+						</tr>
+					</tbody>
+				</table>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row with-spacing">
+			<div class="box-16">
+				<h6>Table with Header</h6>
+				<table>
 					<thead>
 						<tr>
 							<th>Table Header</th>
@@ -812,7 +858,7 @@ span.headline {background: none; color: #464646;}
 		
 		<div class="row">
 			<div class="box-16">
-				<h6>Table with Footer</h6>
+				<h6>Table with Header and Footer</h6>
 				<table class="with-footer">
 					<thead>
 						<tr>
