edited grid and added 12 and 24 column layout examples

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -247,85 +247,85 @@ span.headline {background: none; color: #464646;}
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<span>third</span>
-			</div><!--/.box-5-->
+			</div><!--/.box-3rd-->
 			
-			<div class="box-10 two-third">
+			<div class="box-2-3rd">
 				<span>two-thirds</span>
-			</div><!--/.box-10-->
+			</div><!--/.box-2-3rd-->
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="box-10 two-third">
+			<div class="box-2-3rd">
 				<span>two-thirds</span>
-			</div><!--/.box-10-->
+			</div><!--/.box-2-3rd-->
 		
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<span>third</span>
-			</div><!--/.box-5-->
+			</div><!--/.box-3rd-->
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<span>third</span>
-			</div><!--/.box-5-->
+			</div><!--/.box-3rd-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<span>third</span>
-			</div><!--/.box-5-->
+			</div><!--/.box-3rd-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<span>third</span>
-			</div><!--/.box-5-->
+			</div><!--/.box-3rd-->
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="box-4 fifth">
+			<div class="box-5th">
 				<span>fifth</span>
-			</div><!--/.box-4-->
+			</div><!--/.box-5th-->
 			
-			<div class="box-4 fifth">
+			<div class="box-5th">
 				<span>fifth</span>
-			</div><!--/.box-4-->
+			</div><!--/.box-5th-->
 			
-			<div class="box-4 fifth">
+			<div class="box-5th">
 				<span>fifth</span>
-			</div><!--/.box-4-->
+			</div><!--/.box-5th-->
 			
-			<div class="box-4 fifth">
+			<div class="box-5th">
 				<span>fifth</span>
-			</div><!--/.box-4-->
+			</div><!--/.box-5th-->
 			
-			<div class="box-4 fifth">
+			<div class="box-5th">
 				<span>fifth</span>
-			</div><!--/.box-4-->
+			</div><!--/.box-5th-->
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="box-3 sixth">
+			<div class="box-6th">
 				<span>sixth</span>
-			</div><!--/.box-3-->
+			</div><!--/.box-6th-->
 			
-			<div class="box-3 sixth">
+			<div class="box-6th">
 				<span>sixth</span>
-			</div><!--/.box-3-->
+			</div><!--/.box-6th-->
 			
-			<div class="box-3 sixth">
+			<div class="box-6th">
 				<span>sixth</span>
-			</div><!--/.box-3-->
+			</div><!--/.box-6th-->
 			
-			<div class="box-3 sixth">
+			<div class="box-6th">
 				<span>sixth</span>
-			</div><!--/.box-3-->
+			</div><!--/.box-6th-->
 			
-			<div class="box-3 sixth">
+			<div class="box-6th">
 				<span>sixth</span>
-			</div><!--/.box-3-->
+			</div><!--/.box-6th-->
 			
-			<div class="box-3 sixth">
+			<div class="box-6th">
 				<span>sixth</span>
-			</div><!--/.box-3-->
+			</div><!--/.box-6th-->
 		</div><!--/.row-->
 		
 		<div class="row">
