--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -602,6 +602,12 @@ span.headline {background: none; color: #464646;}
 		
 		<div class="row">
 			<div class="box-16">
+				<a class="button oval" href="">Oval Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-16">
 				<a class="button striped" href="">Striped Button</a>
 			</div><!--/.box-16-->
 		</div><!--/.row-->
