minor changes to LESS

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -409,8 +409,10 @@ span.headline {background: none; color: #464646;}
 			</div><!--/.box-16-->
 			
 			<div class="box-16">
+				<h6>Large Paragraph</h6>
 				<p class="large">Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive amaranth garlic azuki bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
 				
+				<h6>Paragraph</h6>
 				<p>Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive amaranth garlic azuki bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
 				
 				<p>Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive amaranth garlic azuki bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna <a href="">quandong shallot</a> cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
@@ -426,7 +428,7 @@ span.headline {background: none; color: #464646;}
 				<h4>Lists</h4>
 			</div><!--/.box-16-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Plain</h6>
 				<ul>
 					<li>Veggies sunt bona vobis</li>
@@ -438,7 +440,7 @@ span.headline {background: none; color: #464646;}
 				</ul>
 			</div><!--/.box-5-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Disc</h6>
 				<ul class="disc">
 					<li>Veggies sunt bona vobis</li>
@@ -450,7 +452,7 @@ span.headline {background: none; color: #464646;}
 				</ul>
 			</div><!--/.box-5-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Square</h6>
 				<ul class="square">
 					<li>Veggies sunt bona vobis</li>
@@ -464,7 +466,7 @@ span.headline {background: none; color: #464646;}
 		</div><!--/.row-->
 		
 		<div class="row with-spacing">	
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Checkmark</h6>
 				<ul class="checkmark">
 					<li>Veggies sunt bona vobis</li>
@@ -476,7 +478,7 @@ span.headline {background: none; color: #464646;}
 				</ul>
 			</div><!--/.box-5-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Plus</h6>
 				<ul class="plus">
 					<li>Veggies sunt bona vobis</li>
@@ -488,7 +490,7 @@ span.headline {background: none; color: #464646;}
 				</ul>
 			</div><!--/.box-5-->
 			
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Multiply</h6>
 				<ul class="multiply">
 					<li>Veggies sunt bona vobis</li>
@@ -502,7 +504,7 @@ span.headline {background: none; color: #464646;}
 		</div><!--/.row-->
 		
 		<div class="row with-spacing">	
-			<div class="box-5 third">
+			<div class="box-3rd">
 				<h6>Ordered List</h6>
 				<ol>
 					<li>Veggies sunt bona vobis</li>
@@ -514,15 +516,23 @@ span.headline {background: none; color: #464646;}
 				</ol>
 			</div><!--/.box-5-->
 			
-			<div class="box-10 two-third">
+			<div class="box-3rd">
+				<h6>Definition List</h6>
+				<dl>
+					<dt>This is a Title</dt>
+					<dd>Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive.</dd>
+					<dt>This is a Title</dt>
+					<dd>Veggies sunt bona vobis, proinde vos postulo esse magis bush.</dd>
+				</dl>
+			</div><!--/.box-5-->
+			
+			<div class="box-3rd">
 				<h6>Inline List</h6>
 				<ul class="inline">
 					<li><a href="">Link 1</a></li>
 					<li><a href="">Link 2</a></li>
 					<li><a href="">Link 3</a></li>
 					<li><a href="">Link 4</a></li>
-					<li><a href="">Link 5</a></li>
-					<li><a href="">Link 6</a></li>
 				</ul>
 			</div><!--/.box-10-->
 		</div><!--/.row-->
