changes to form and tabs

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -710,6 +710,13 @@ span.headline {background: none; color: #464646;}
 					</div><!--/.row-->
 					
 					<div class="row">
+						<div class="box-6">
+							<input class="radio-button" type="radio"/>
+							<label>This is a radio button label</label>
+						</div><!--/.box-6-->
+					</div><!--/.row-->
+					
+					<div class="row">
 						<div class="box-3">
 							<input class="button submit" type="submit" value="Submit"/>
 						</div><!--/.box-3-->
