rearranged folders and folder names

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -33,7 +33,7 @@
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/touch_icon_114x114.png"/>
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/touch_icon_144x144.png"/>
 
-<link rel="stylesheet" href="css/style_complete.css" media="screen"/>
+<link rel="stylesheet" href="css/ferret.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -419,6 +419,9 @@ span.headline {background: none; color: #464646;}
 				<p>Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive amaranth garlic azuki bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
 				
 				<p>Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive amaranth garlic azuki bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna <a href="">quandong shallot</a> cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
+				
+				<h6>Small</h6>
+				<p class="small">Veggies sunt bona vobis, proinde vos postulo esse magis bush tomato endive amaranth garlic azuki bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
