--- a/ferret_grid_24.html
+++ b/ferret_grid_24.html
@@ -33,7 +33,7 @@
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/touch_icon_114x114.png"/>
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/touch_icon_144x144.png"/>
 
-<link rel="stylesheet" href="css/style_complete.css" media="screen"/>
+<link rel="stylesheet" href="css/ferret.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
