added body class function to RV resources

--- a/resources/red_ventures/index.html
+++ b/resources/red_ventures/index.html
@@ -6,9 +6,9 @@
 			<div class="box-16">
 				<nav role="navigation">
 					<ul>
-						<li<?php if($page == 'YOUR PAGE NAME.html') echo $active; ?>><a href="">Link 1</a></li>
-						<li<?php if($page == 'YOUR PAGE NAME.html') echo $active; ?>><a href="">Link 2</a></li>
-						<li<?php if($page == 'YOUR PAGE NAME.html') echo $active; ?>><a href="">Link 3</a></li>
+						<li<?php if($page == 'YOUR PAGE NAME') echo $active; ?>><a href="">Link 1</a></li>
+						<li<?php if($page == 'YOUR PAGE NAME') echo $active; ?>><a href="">Link 2</a></li>
+						<li<?php if($page == 'YOUR PAGE NAME') echo $active; ?>><a href="">Link 3</a></li>
 					</ul>
 				</nav>
 			</div><!--/.box-16-->
