--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -330,6 +330,42 @@ span.headline {background: none; color: #464646;}
 			</div><!--/.box-6th-->
 		</div><!--/.row-->
 		
+		<div class="row large-gutters">
+			<div class="box-3rd">
+				<span>Large Gutter</span>
+			</div><!--/.box-3rd-->
+			
+			<div class="box-3rd">
+				<span>Large Gutter</span>
+			</div><!--/.box-3rd-->
+			
+			<div class="box-3rd">
+				<span>Large Gutter</span>
+			</div><!--/.box-3rd-->
+		</div><!--/.row-->
+		
+		<div class="row no-gutters">
+			<div class="box-5th">
+				<span>No Gutter</span>
+			</div><!--/.box-5th-->
+			
+			<div class="box-5th">
+				<span>No Gutter</span>
+			</div><!--/.box-5th-->
+			
+			<div class="box-5th">
+				<span>No Gutter</span>
+			</div><!--/.box-5th-->
+			
+			<div class="box-5th">
+				<span>No Gutter</span>
+			</div><!--/.box-5th-->
+			
+			<div class="box-5th">
+				<span>No Gutter</span>
+			</div><!--/.box-5th-->
+		</div><!--/.row-->
+		
 		<div class="row">
 			<div class="box-16">
 				Nested Row Example
@@ -950,7 +986,7 @@ span.headline {background: none; color: #464646;}
 			</div><!--/.box-16-->
 			
 			<div class="box-16">
-				<p>Veggies sunt bona vobis, <a class="tooltip" href="#"><span>This is a tooltip</span>proinde</a> vos postulo esse magis bush tomato endive amaranth garlic azuki <a class="tooltip" href="#"><span>This is also a tooltip</span>proinde</a> bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone <a class="tooltip" href="#"><span>This is a tooltip that is much longer than the last.</span>proinde nori</a> bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
+				<p>Veggies sunt bona vobis, <a class="tooltip" href="#"><span>This is a tooltip</span>proinde</a> vos postulo esse magis bush tomato endive amaranth garlic azuki <a class="tooltip bottom" href="#"><span>This is also a tooltip</span>proinde</a> bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone <a class="tooltip" href="#"><span>This is a tooltip that is much longer than the last.</span>proinde nori</a> bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
