added OpenSansBold, removed logo, and made some other adjustments

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -39,18 +39,6 @@
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="js/fancybox.min.js"></script>
 
-<!-- JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT -->
-<style>
-section {padding: 20px 0; border-bottom: 1px solid #e1e1e1; margin-bottom: 20px;}
-.row {margin-bottom: 20px;}
-span {display: block; -webkit-transition: all .15s ease-in-out; background: #e1e1e1;}
-span:hover {background: #464646; color: #fff;}
-span.headline {background: none; color: #464646;}
-.row .row {background: #acacac;}
-.row form .row {background: none;}
-</style>
-<!-- END REMOVE -->
-
 </head>
 <body>
 
@@ -58,7 +46,7 @@ span.headline {background: none; color: #464646;}
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
-				<img class="logo" src="images/logo_ferret.png" alt="Ferret"/>
+				<span class="logo">Ferret</span>
 				<div class="mobile-nav"></div>
 				<nav role="navigation">
 					<ul>
