--- a/ferret_grid_24.html
+++ b/ferret_grid_24.html
@@ -472,7 +472,7 @@ span.headline {background: none; color: #464646;}
 
 <!--Scripts-->
 <script src="js/base.js"></script>
-<script src="js/functions.js"></script>
+<script src="js/app.js"></script>
 
 <!--[if lt IE 10 ]>
 <script src="js/placeholder.min.js"></script>
