edits to image path and media queries

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -653,7 +653,19 @@
 		
 		<div class="row">
 			<div class="box-16">
+				<a class="button mini" href="">Mini Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-16">
 				<a class="button small" href="">Small Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-16">
+				<a class="button" href="">Normal Button</a>
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 		
