--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 						<li><a href="">Link 1</a></li>
 						<li><a href="">Link 2</a></li>
 						<li><a href="">Link 3</a></li>
+						<li><a href="">Link 4</a></li>
 					</ul>
 				</nav>
 			</div><!--/.box-16-->
