--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -36,8 +36,8 @@
 <link rel="stylesheet" href="css/ferret.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script src="js/fancybox.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<!-- <script src="js/fancybox.min.js"></script> -->
 
 </head>
 <body>
