updates to LESS 1.4

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -681,9 +681,33 @@
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 		
-		<div class="row with-spacing">
+		<div class="row">
 			<div class="box-16">
 				<a class="button full-width" href="">Full-width Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-16">
+				<a class="button primary" href="">Primary Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-16">
+				<a class="button secondary" href="">Secondary Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row">
+			<div class="box-16">
+				<a class="button tertiary" href="">Tertiary Button</a>
+			</div><!--/.box-16-->
+		</div><!--/.row-->
+		
+		<div class="row with-spacing">
+			<div class="box-16">
+				<a class="button disabled" href="">Disabled Button</a>
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
