edits to LESS stuff

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -458,7 +458,7 @@
 			</div><!--/.box-16-->
 			
 			<div class="box-3rd">
-				<h6>Plain</h6>
+				<h6>Default</h6>
 				<ul>
 					<li>Veggies sunt bona vobis</li>
 					<li>Veggies bona vobis potato</li>
