edits to grid and media queries

--- a/ferret_demo.html
+++ b/ferret_demo.html
@@ -23,6 +23,16 @@
 <meta property="og:image" content="images/fb_icon.png"/>
 <!-- Open Graph -->
 
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="">
+<meta name="twitter:title" content="">
+<meta name="twitter:description" content="">
+<meta name="twitter:creator" content="">
+<meta name="twitter:image:src" content="">
+<meta name="twitter:domain" content="">
+<!-- Twitter Card -->
+
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
 <link rel="canonical" href=""/>
@@ -36,7 +46,7 @@
 <link rel="stylesheet" href="css/ferret.css" media="screen"/>
 
 <script src="js/modernizr.js"></script>
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="js/fancybox.min.js"></script>
 
 </head>
@@ -66,7 +76,7 @@
 	</div><!--/.container-->
 </header>
 
-<section id="grid" class="first">
+<section id="grid" class="first-section">
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
