--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 <meta property="og:image" content="images/fb_icon.png"/>
 <!-- Open Graph -->
 
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:site" content="">
+<meta name="twitter:title" content="">
+<meta name="twitter:description" content="">
+<meta name="twitter:creator" content="">
+<meta name="twitter:image:src" content="">
+<meta name="twitter:domain" content="">
+<!-- Twitter Card -->
+
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
 <link rel="canonical" href=""/>
@@ -60,7 +70,7 @@
 	</div><!--/.container-->
 </header>
 
-<section id="content" class="first">
+<section id="content" class="first-section">
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
