fixes and edits

--- a/ferret-demo.html
+++ b/ferret-demo.html
@@ -1022,7 +1022,7 @@
 			</div><!--/.box-16-->
 			
 			<div class="box-16">
-				<p>Veggies sunt bona vobis, <a class="tooltip" href="#"><span>This is a tooltip</span>proinde</a> vos postulo esse magis bush tomato endive amaranth garlic azuki <a class="tooltip bottom" href="#"><span>This is also a tooltip</span>proinde</a> bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone <a class="tooltip" href="#"><span>This is a tooltip that is much longer than the last.</span>proinde nori</a> bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
+				<p>Veggies sunt bona vobis, <a class="tooltip disabled" href="#"><span>This is a tooltip</span>proinde</a> vos postulo esse magis bush tomato endive amaranth garlic azuki <a class="tooltip bottom" href="#"><span>This is also a tooltip</span>proinde</a> bean soko garbanzo cress mung bean radish celery beetroot rutabaga swiss chard. Komatsuna quandong shallot cabbage gourd broccoli salad nori daikon tatsoi brussels sprout sierra leone <a class="tooltip" href="#"><span>This is a tooltip that is much longer than the last.</span>proinde nori</a> bologi desert raisin komatsuna melon. Water chestnut potato seakale spinach avocado nori komatsuna tomatillo winter purslane water chestnut. Avocado nori plantain prairie turnip earthnut pea kohlrabi.</p>
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
