edits to head and less

--- a/ferret-demo.html
+++ b/ferret-demo.html
@@ -8,7 +8,7 @@
 <head>
 <title></title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="initial-scale=1">
 
 <!-- Open Graph -->
 <meta property="og:title" content="">
@@ -41,7 +41,7 @@
 <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/touch_icon_152x152.png">
 
 
-<link rel="stylesheet" href="css/ferret.css" media="screen"/>
+<link rel="stylesheet" href="css/ferret.css?v=1" media="screen"/>
 
 <script src="js/modernizr.js"></script>
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
