--- a/index.html
+++ b/index.html
@@ -7,20 +7,17 @@
 
 <head>
 <title></title>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<!--[if IE]>
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<![endif]-->
+<meta charset="UTF-8">
+<meta name="viewport" content="initial-scale=1">
 
 <!-- Open Graph -->
-<meta property="og:title" content=""/>
-<meta property="og:description" content=""/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content=""/>
-<meta property="og:site_name" content=""/>
-<meta property="fb:app_id" content=""/>
-<meta property="og:image" content="images/fb_icon.png"/>
+<meta property="og:title" content="">
+<meta property="og:description" content="">
+<meta property="og:type" content="website">
+<meta property="og:url" content="">
+<meta property="og:site_name" content="">
+<meta property="fb:app_id" content="">
+<meta property="og:image" content="images/fb_icon.png">
 <!-- Open Graph -->
 
 <!-- Twitter Card -->
@@ -33,20 +30,21 @@
 <meta name="twitter:domain" content="">
 <!-- Twitter Card -->
 
-<meta name="description" content=""/>
-<meta name="keywords" content=""/>
-<link rel="canonical" href=""/>
+<meta name="description" content="">
+<meta name="keywords" content="">
+<link rel="canonical" href="">
 
-<link rel="shortcut icon" sizes="256x256" href="images/favicon.ico"/> 
-<link rel="apple-touch-icon-precomposed" href="images/touch_icon.png"/>
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/touch_icon_72x72.png"/>
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/touch_icon_114x114.png"/>
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/touch_icon_144x144.png"/>
+<link rel="shortcut icon" sizes="256x256" href="images/favicon.ico">
+<link rel="apple-touch-icon-precomposed" href="images/touch_icon.png">
+<link rel="apple-touch-icon-precomposed" sizes="80x80" href="images/touch_icon_80x80.png">
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/touch_icon_120x120.png">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/touch_icon_152x152.png">
 
-<link rel="stylesheet" href="css/ferret.css" media="screen"/>
+
+<link rel="stylesheet" href="css/ferret.css?v=1" media="screen"/>
 
 <script src="js/modernizr.js"></script>
-<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="js/fancybox.min.js"></script>
 
 </head>
@@ -70,7 +68,7 @@
 	</div><!--/.container-->
 </header>
 
-<section id="content" class="first-section">
+<main id="content" class="first-section" role="main">
 	<div class="container">
 		<div class="row">
 			<div class="box-16">
@@ -78,7 +76,7 @@
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 	</div><!--/.container-->
-</section>
+</main>
 
 <footer role="contentinfo">
 	<div class="container">
