edit to demo page

--- a/ferret-demo-sass.html
+++ b/ferret-demo-sass.html
@@ -403,7 +403,7 @@
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 		
-		<div class="row with-spacing">
+		<div class="row">
 			<div class="box-16">
 				Centered Box Example 3
 				<div class="row centered">
@@ -418,7 +418,7 @@
 			</div><!--/.box-16-->
 		</div><!--/.row-->
 		
-		<div class="row with-spacing">
+		<div class="row">
 			<div class="box-16">
 				Push Left
 				<div class="row">
